--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="bluestyle.css">
+    <meta charset="UTF-8">
 </head>
 <body>
     <h1>Hello world!</h1>
